# jitter-monitor-plugin

./: CMakeLists.txt  README.md
resource/: jitter_monitor_editor.uidesc
source/: jitter_algo.cpp  jitter_algo.h  jitter_monitor_cids.h  jitter_monitor_controller.cpp  jitter_monitor_controller.h  jitter_monitor_entry.cpp  jitter_monitor_param_ids.h  jitter_monitor_processor.cpp  jitter_monitor_processor.h  version.h
